# SDL_helloworld

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.c
.github/workflows/: main.yml
android-project/: README.md
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
